--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.2"
 services:
-  php:
+  php2:
     build: 
       context: './php/'
       args:
@@ -9,15 +9,15 @@ services:
       - backend
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
-    container_name: php
-  apache:
+    container_name: php2
+  apache2:
     build:
       context: './apache/'
       args:
        APACHE_VERSION: ${APACHE_VERSION}
     depends_on:
-      - php
-      - mysql
+      - php2
+      - mysql2
     networks:
       - frontend
       - backend
@@ -25,8 +25,8 @@ services:
       - "80:80"
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
-    container_name: apache
-  mysql:
+    container_name: apache2
+  mysql2:
     image: mysql:${MYSQL_VERSION:-latest}
     restart: always
     ports:
@@ -40,7 +40,7 @@ services:
       MYSQL_DATABASE: "${DB_NAME}"
       MYSQL_USER: "${DB_USERNAME}"
       MYSQL_PASSWORD: "${DB_PASSWORD}"
-    container_name: mysql
+    container_name: mysql2
 networks:
   frontend:
   backend:
